<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/partial_toolbar_with_back"/>

    <EditText
        android:id="@+id/notice_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:background="@null"
        android:gravity="start"
        android:padding="8dp"
        android:hint="@string/new_notice_hint"/>

    <LinearLayout
        android:id="@+id/property_container"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Switch
                android:id="@+id/is_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="8dp"
                android:textOn="@string/top"
                android:textOff="@string/no_top"
                android:text="@string/top"/>

            <Button
                android:id="@+id/top_start_time"
                android:visibility="invisible"
                android:layout_marginLeft="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_start_time"/>

            <Button
                android:id="@+id/top_end_time"
                android:visibility="invisible"
                android:layout_marginLeft="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_end_time"/>

        </LinearLayout>

        <TextView
            android:id="@+id/timeRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>
