<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_marginBottom="@dimen/toolbar_height"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <android.support.v7.widget.Toolbar
            android:background="@android:color/white"
            android:elevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">

            <TextView android:id="@+id/title"
                      android:textSize="@dimen/title_text_size"
                      android:textColor="@android:color/black"
                      android:layout_gravity="center"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/payment"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/no_items"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_payment_require"/>

    <include layout="@layout/partial_refresh_recycler_1_weight"/>

    <LinearLayout
        android:id="@+id/pay_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="@dimen/toolbar_height">

        <CheckBox
            android:id="@+id/all_check"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/all_check"/>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/amount_title"/>
            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"
                android:text="￥0.00"/>
        </LinearLayout>

        <Button
            android:id="@+id/pay"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/flat_button"
            android:text="@string/confirm_pay"/>
    </LinearLayout>
</LinearLayout>
