<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <include layout="@layout/item_repair"/>


    <include layout="@layout/divider"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:textColor="@android:color/black"
            android:text="@string/change_repair_status"/>
        <Button
            android:id="@+id/turn_to_repairing"
            android:background="@color/colorPrimary"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/required"/>

        <Button
            android:id="@+id/turn_to_finished"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/finished"/>
    </LinearLayout>
</LinearLayout>
