<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/partial_toolbar"/>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/manage_community"/>

            <TextView
                android:id="@+id/community_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginLeft="8dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/toyear_fee_publish_status"/>

            <TextView
                android:id="@+id/property_fee_post_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginLeft="8dp"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/publish_property_fee"
        android:layout_margin="24dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_toyear_property_fee"/>
</LinearLayout>
